radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: radarr
    port: 80
    targetPort: 4180
