radarr/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - radarr.desertbluffs.com
    secretName: radarr-tls
  rules:
  - host: radarr.desertbluffs.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 80
